--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -33,10 +33,10 @@ body {
   padding: 2rem;
   display: flex;
   place-items: center;
-  margin: auto
   flex: 1;
 }
 
 main {
   width: 500px;
+  margin: 0 auto;
 }
